# play_quickjs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
QuickJS/: CMakeLists.txt
TypeScript/: CMakeLists.txt
TypeScript/src/: main.c
qjs/: CMakeLists.txt
qjsc/: CMakeLists.txt
